feat: guard automatic work item ack and block
